--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>SoMe-prosjekt</title>
 </head>
 <body>
+    <h1>Sosiale medier </h1>
+    <section> 
+    </section>
+
+    <section> 
+    </section>
+
+    <section> 
+    </section>
     
 </body>
 </html>
