--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
     <title>SoMe-prosjekt</title>
 </head>
 <body>
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+
     <h1>Sosiale medier </h1>
-    <section> 
+    <section id="story"> 
     </section>
 
-    <section> 
+    <section id="tuttifrutti"> 
     </section>
 
-    <section> 
-    </section>
+    <footer> 
+        
+    </footer>
     
 </body>
 </html>
