--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
     <header>
         <nav>
-
+            <div class="toppnav">
+                <a href="#">SOME</a>
+            </div>
+            <div>
+                <a href="universiell_utforming.html">Universiell utforming</a>
+                <a href="gdpr.html">Personvern</a>
+            </div>
         </nav>
     </header>
 
