--- a/index.html
+++ b/index.html
@@ -17,10 +17,43 @@
     </section>
 
     <section id="tuttifrutti"> 
+        <h1> Fenomener på sosiale medier</h1>
+        <div> 
+            <h2>Ghosting</h2>
+            <p>  
+            </p>
+        </div>
+        <div> 
+            <h2>Reading</h2>
+            <p> 
+                Reading er et fenomen hvro du åpner snappen til noen, men ikke svarer 
+            </p>
+        </div>
+        <div> 
+            <h2>Dobbelsnap</h2>
+            <p></p>
+        </div>
+        <div> 
+            <h2>Halfswipe</h2>
+            <p></p>
+        </div>
+        <div> 
+            <h2>Stalking</h2>
+            <p></p>
+        </div>
+        <div> 
+            <h2>Tiktok</h2>
+            <p></p>
+        </div>
+
+    </section>
+
+    <section id="spill"> 
+
     </section>
 
     <footer> 
-        
+
     </footer>
     
 </body>
