--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoMe-prosjekt</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -19,48 +21,57 @@
     </header>
 
     <h1>Sosiale medier </h1>
-    <section id="story"> 
+    <section id="story">
     </section>
 
-    <section id="tuttifrutti"> 
+    <section id="tuttifrutti">
         <h1> Fenomener på sosiale medier</h1>
-        <div> 
+        <div>
             <h2>Ghosting</h2>
-            <p>  
+            <p>
             </p>
         </div>
-        <div> 
+        <div>
             <h2>Reading</h2>
-            <p> 
-                Reading er et fenomen hvro du åpner snappen til noen, men ikke svarer 
+            <p>
+                Reading er når man åpner snappen til noen, men ikke svarer
             </p>
         </div>
-        <div> 
+        <div>
             <h2>Dobbelsnap</h2>
-            <p></p>
+            <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
+                Normalt er det vanlig å kun sende en om gangen. Dermed er det utenom det vanlige dersom man sender to
+                etter hverandre. Eksempeler på tilfeller hvor det er innafor å sende dobbelsnap er: </p>
+                <ul> 
+                    <li> hvis det er noen viktig</li>
+                    <li> hvis det bestevennen din</li>
+                    <li> hvis du vil vise ekstra interresse <i class="fa-regular fa-face-grin-wink"></i></li>
+                </ul>
+
         </div>
-        <div> 
+        <div>
             <h2>Halfswipe</h2>
             <p></p>
         </div>
-        <div> 
+        <div>
             <h2>Stalking</h2>
             <p></p>
         </div>
-        <div> 
+        <div>
             <h2>Tiktok</h2>
             <p></p>
         </div>
 
     </section>
 
-    <section id="spill"> 
+    <section id="spill">
 
     </section>
 
-    <footer> 
+    <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
