--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Universiell utforming </title>
 </head>
+
 <body>
 
     <header>
 
     </header>
 
-    <title> UNIVERSIELL UTFORMING </title>
-    
-    
+
+    <h1> UNIVERSIELL UTFORMING </h1>
+    <h2> Hva er universiell utforming? </h2>
+    <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
+        tilgjengelege for alle, uavhengig av alder, funksjonsevne og utdanningsnivå.
+        Universiell utforming handler også om hvor tilgjengelig siden er for alle i en målgruppe, og respektere ulike
+        brukeres utgangspunkt som erfaring, kunnskap,
+        språkferdigheter og konsentrasjonsnivå.</p>
+
+
+    <section id="syn">
+
+
+    </section>
+
+    <section id="kontrast">
+
+    </section>
+
+    <section id="lyd">
+
+    </section>
+
+    <footer>
+
+    </footer>
+
+
 </body>
+
 </html>
