tenkst på fenomenenen

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>SoMe-prosjekt</title>
 </head>
 
@@ -28,38 +29,44 @@
         <h1> Fenomener på sosiale medier</h1>
         <div>
             <h2>Ghosting</h2>
-            <p>
-            </p>
+            <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
         </div>
         <div>
             <h2>Reading</h2>
-            <p>
-                Reading er når man åpner snappen til noen, men ikke svarer
-            </p>
+            <p> Reading er når man åpner snappen til noen, men ikke svarer. begrepe kan også bli brukt om meldinger </p>
         </div>
         <div>
             <h2>Dobbelsnap</h2>
             <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
                 Normalt er det vanlig å kun sende en om gangen. Dermed er det utenom det vanlige dersom man sender to
                 etter hverandre. Eksempeler på tilfeller hvor det er innafor å sende dobbelsnap er: </p>
-                <ul> 
-                    <li> hvis det er noen viktig</li>
-                    <li> hvis det bestevennen din</li>
-                    <li> hvis du vil vise ekstra interresse <i class="fa-regular fa-face-grin-wink"></i></li>
-                </ul>
+            <ul>
+                <li> hvis det er noen viktig</li>
+                <li> hvis det bestevennen din</li>
+                <li> hvis du vil vise ekstra interresse <i class="fa-regular fa-face-grin-wink"></i></li>
+            </ul>
 
         </div>
         <div>
             <h2>Halfswipe</h2>
-            <p></p>
+            <p> Halfswiping er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har lest den.
+                Det kalles halfswiping fordi man drar skjermen halveis til siden for å se chatten. </p>
         </div>
         <div>
             <h2>Stalking</h2>
-            <p></p>
+            <p>Stalking vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra hva som ligger
+                ute av informasjon om dem på nettet. Sosiale medier og funksjoner som ofte brukes til stalking er:</p>
+            <ul>
+                <li> Snapchat </li>
+                <li> FaceBook </li>
+                <li> Instagarm </li>
+                <li> VSCO </li>
+            </ul>
         </div>
         <div>
             <h2>Tiktok</h2>
-            <p></p>
+            <p> Tiktok er et sosialt medium som står for mange av trendene blant unge i dag. Skal man markedsføre en
+                sang i dag er det rette stedet uten tvil tiktok. </p>
         </div>
 
     </section>
