--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
     <section id="tuttifrutti">
         <h2> Fenomener på sosiale medier</h2>
-        <div>
+        <div class="fenomen">
             <h3>Ghosting</h3>
             <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
         </div>
-        <div>
+        <div class="fenomen">
             <h3>Reading</h3>
             <p> Reading er når man åpner snappen til noen, men ikke svarer. begrepe kan også bli brukt om meldinger </p>
         </div>
-        <div>
+        <div class="fenomen">
             <h3>Dobbelsnap</h3>
             <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
                 Normalt er det vanlig å kun sende en om gangen. Dermed er det utenom det vanlige dersom man sender to
@@ -47,12 +47,12 @@
             </ul>
 
         </div>
-        <div>
+        <div class="fenomen">
             <h3>Halfswipe</h3>
             <p> Halfswiping er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har lest den.
                 Det kalles halfswiping fordi man drar skjermen halveis til siden for å se chatten. </p>
         </div>
-        <div>
+        <div class="fenomen">
             <h3>Stalking</h3>
             <p>Stalking vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra hva som ligger
                 ute av informasjon om dem på nettet. Sosiale medier og funksjoner som ofte brukes til stalking er:</p>
@@ -63,7 +63,7 @@
                 <li> VSCO </li>
             </ul>
         </div>
-        <div>
+        <div class="fenomen">
             <h3>Tiktok</h3>
             <p> Tiktok er et sosialt medium som står for mange av trendene blant unge i dag. Skal man markedsføre en
                 sang i dag er det rette stedet uten tvil tiktok. </p>
