--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <h1>Sosiale medier </h1>
+    <h1>SoME - Sosiale medier</h1>
     <section id="story">
     </section>
 
