--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="toppnav">
                 <a href="#">SOME</a>
             </div>
-            <div>
-                <a href="universiell_utforming.html">Universiell utforming</a>
-                <a href="gdpr.html">Personvern</a>
-            </div>
+            <ul>
+                <li><a href="#">Universiell utforming</a></li>
+                <li><a href="#">GDPR</a></li>
+            </ul>
         </nav>
     </header>
 
