--- a/index.html
+++ b/index.html
@@ -21,63 +21,70 @@
         </nav>
     </header>
 
-    <h1>SoME - Sosiale medier</h1>
-    <section id="story">
-    </section>
+    <main>
+        <h1>SoME - Sosiale medier</h1>
+        <section id="story">
+        </section>
 
-    <section id="tuttifrutti">
-        <h2> Fenomener på sosiale medier</h2>
-        <div class="fenomen">
-            <h3>Ghosting</h3>
-            <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
-        </div>
-        <div class="fenomen">
-            <h3>Reading</h3>
-            <p> Reading er når man åpner snappen til noen, men ikke svarer. begrepe kan også bli brukt om meldinger </p>
-        </div>
-        <div class="fenomen">
-            <h3>Dobbelsnap</h3>
-            <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
-                Normalt er det vanlig å kun sende en om gangen. Dermed er det utenom det vanlige dersom man sender to
-                etter hverandre. Eksempeler på tilfeller hvor det er innafor å sende dobbelsnap er: </p>
-            <ul>
-                <li> hvis det er noen viktig</li>
-                <li> hvis det bestevennen din</li>
-                <li> hvis du vil vise ekstra interresse <i class="fa-regular fa-face-grin-wink"></i></li>
-            </ul>
+        <section id="tuttifrutti">
+            <h2> Fenomener på sosiale medier</h2>
+            <div class="fenomen">
+                <h3>Ghosting</h3>
+                <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
+            </div>
+            <div class="fenomen">
+                <h3>Reading</h3>
+                <p> Reading er når man åpner snappen til noen, men ikke svarer. begrepe kan også bli brukt om meldinger
+                </p>
+            </div>
+            <div class="fenomen">
+                <h3>Dobbelsnap</h3>
+                <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
+                    Normalt er det vanlig å kun sende en om gangen. Dermed er det utenom det vanlige dersom man sender
+                    to
+                    etter hverandre. Eksempeler på tilfeller hvor det er innafor å sende dobbelsnap er: </p>
+                <ul>
+                    <li> hvis det er noen viktig</li>
+                    <li> hvis det bestevennen din</li>
+                    <li> hvis du vil vise ekstra interresse <i class="fa-regular fa-face-grin-wink"></i></li>
+                </ul>
 
-        </div>
-        <div class="fenomen">
-            <h3>Halfswipe</h3>
-            <p> Halfswiping er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har lest den.
-                Det kalles halfswiping fordi man drar skjermen halveis til siden for å se chatten. </p>
-        </div>
-        <div class="fenomen">
-            <h3>Stalking</h3>
-            <p>Stalking vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra hva som ligger
-                ute av informasjon om dem på nettet. Sosiale medier og funksjoner som ofte brukes til stalking er:</p>
-            <ul>
-                <li> Snapchat </li>
-                <li> FaceBook </li>
-                <li> Instagarm </li>
-                <li> VSCO </li>
-            </ul>
-        </div>
-        <div class="fenomen">
-            <h3>Tiktok</h3>
-            <p> Tiktok er et sosialt medium som står for mange av trendene blant unge i dag. Skal man markedsføre en
-                sang i dag er det rette stedet uten tvil tiktok. </p>
-        </div>
+            </div>
+            <div class="fenomen">
+                <h3>Halfswipe</h3>
+                <p> Halfswiping er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har lest
+                    den.
+                    Det kalles halfswiping fordi man drar skjermen halveis til siden for å se chatten. </p>
+            </div>
+            <div class="fenomen">
+                <h3>Stalking</h3>
+                <p>Stalking vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra hva som
+                    ligger
+                    ute av informasjon om dem på nettet. Sosiale medier og funksjoner som ofte brukes til stalking er:
+                </p>
+                <ul>
+                    <li> Snapchat </li>
+                    <li> FaceBook </li>
+                    <li> Instagarm </li>
+                    <li> VSCO </li>
+                </ul>
+            </div>
+            <div class="fenomen">
+                <h3>Tiktok</h3>
+                <p> Tiktok er et sosialt medium som står for mange av trendene blant unge i dag. Skal man markedsføre en
+                    sang i dag er det rette stedet uten tvil tiktok. </p>
+            </div>
 
-    </section>
+        </section>
 
-    <section id="spill">
+        <section id="spill">
 
-    </section>
+        </section>
 
-    <footer>
+        <footer>
 
-    </footer>
+        </footer>
+    </main>
 
 </body>
 
