--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
     <main>
         <h1>SoME - Sosiale medier</h1>
         <section id="story">
+            <div class="slideshow-container">
+                <div class="slide fade">
+                    <img src="bilde1.jpg" alt="Bilde 1">
+                </div>
+                <div class="slide fade">
+                    <img src="bilde2.jpg" alt="Bilde 2">
+                </div>
+                <!-- Legg til flere bildeelementer etter behov -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <script src="script.js"></script>
         </section>
 
         <section id="tuttifrutti">
