--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
     <header>
         <nav>
-            <div class="toppnav">
-                <a href="#">SOME</a>
-            </div>
+            <label class="toppnav">SoMe</label>
             <ul>
                 <li><a href="#">Universiell utforming</a></li>
                 <li><a href="#">GDPR</a></li>
