--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -24,15 +24,41 @@
 
 
     <section id="syn">
+        <div>
+            <h2> Syn </h2>
+            <p> For svaksynte er det viktig at nettsiden er oversiktlig med tydelige overskrifter og fordelinger. En
+                tilpasning på nettsider som gjøres for de blinde er å sette inne en "alt"-tagg. Dette innebærer at de
+                som får lest opp sidene kan se for seg hvordan bilde ser ut.
+
+                For de som er fargeblinde kan det være vanskelig å se forskjeller på ulike farger. Det er vanskeligere å
+                ha hensyn til alle mulige fargeforskjeller, men å unngå grafer og tabeller med rød og grønt slik at
+                fargeblinde ikke klarer å skille resultatene grafen prøver å vise.
+            </p>
+        </div>
 
 
     </section>
 
     <section id="kontrast">
+        <div>
+            <h2> Kontrast </h2>
+            <p> For at lesere skal få en god oversikt på nettsiden, lønner deg seg og ha kontraster. Bakgrunnsfargen på
+                siden og teksten bør ikke begge ha samme type farge. Det vil si at en hvit bakgunn ikke burde ha en lys
+                beige farge. Hvis fargene har like nyanser og ikke skiller mellom lys og mørkt, blir det vanskeligere å
+                se hva som står på siden.
+
+                Lenker eller knapper bør skille seg ut fra resten av teksten. Leseren på nettsiden bør forstå at man
+                skal trykke på bilde, ordet eller et tegn for å komme videre til en ny side, eller få noe til å skje på
+                siden. Dette er også lurt med tanke på nav-baren som skal være lett å navigere i.
+            </p>
+        </div>
 
     </section>
 
     <section id="lyd">
+        <div>
+            <h2> Lyd </h2>
+        </div>
 
     </section>
 
