--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -57,7 +57,9 @@
 
     <section id="lyd">
         <div>
-            <h2> Lyd </h2>
+            <h2> Hørsel </h2>
+            <p> For de med drålig hørsel på en nettside er et av tilpasningene teksting på filmsnutter og lydklipp. Dermed kan de som
+                ser på videoen likevel få med seg hva som blir sagt. </p>
         </div>
 
     </section>
