--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -5,64 +5,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Universiell utforming </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <header>
+        <nav>
 
+        </nav>
     </header>
 
-
-    <h1> UNIVERSIELL UTFORMING </h1>
-    <h2> Hva er universiell utforming? </h2>
-    <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
-        tilgjengelege for alle, uavhengig av alder, funksjonsevne og utdanningsnivå.
-        Universiell utforming handler også om hvor tilgjengelig siden er for alle i en målgruppe, og respektere ulike
-        brukeres utgangspunkt som erfaring, kunnskap,
-        språkferdigheter og konsentrasjonsnivå.</p>
-
-
-    <section id="syn">
-        <div>
-            <h2> Syn </h2>
-            <p> For svaksynte er det viktig at nettsiden er oversiktlig med tydelige overskrifter og fordelinger. En
-                tilpasning på nettsider som gjøres for de blinde er å sette inne en "alt"-tagg. Dette innebærer at de
-                som får lest opp sidene kan se for seg hvordan bilde ser ut.
-
-                For de som er fargeblinde kan det være vanskelig å se forskjeller på ulike farger. Det er vanskeligere å
-                ha hensyn til alle mulige fargeforskjeller, men å unngå grafer og tabeller med rød og grønt slik at
-                fargeblinde ikke klarer å skille resultatene grafen prøver å vise.
-            </p>
-        </div>
+    <main>
+        <h1> UNIVERSIELL UTFORMING </h1>
+        <h2> Hva er universiell utforming? </h2>
+        <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
+            tilgjengelege for alle, uavhengig av alder, funksjonsevne og utdanningsnivå.
+            Universiell utforming handler også om hvor tilgjengelig siden er for alle i en målgruppe, og respektere
+            ulike
+            brukeres utgangspunkt som erfaring, kunnskap,
+            språkferdigheter og konsentrasjonsnivå.</p>
 
 
-    </section>
+        <section id="syn">
+            <div>
+                <h2> Syn </h2>
+                <p> For svaksynte er det viktig at nettsiden er oversiktlig med tydelige overskrifter og fordelinger. En
+                    tilpasning på nettsider som gjøres for de blinde er å sette inne en "alt"-tagg. Dette innebærer at
+                    de
+                    som får lest opp sidene kan se for seg hvordan bilde ser ut.
 
-    <section id="kontrast">
-        <div>
-            <h2> Kontrast </h2>
-            <p> For at lesere skal få en god oversikt på nettsiden, lønner deg seg og ha kontraster. Bakgrunnsfargen på
-                siden og teksten bør ikke begge ha samme type farge. Det vil si at en hvit bakgunn ikke burde ha en lys
-                beige farge. Hvis fargene har like nyanser og ikke skiller mellom lys og mørkt, blir det vanskeligere å
-                se hva som står på siden.
+                    For de som er fargeblinde kan det være vanskelig å se forskjeller på ulike farger. Det er
+                    vanskeligere å
+                    ha hensyn til alle mulige fargeforskjeller, men å unngå grafer og tabeller med rød og grønt slik at
+                    fargeblinde ikke klarer å skille resultatene grafen prøver å vise.
+                </p>
+            </div>
 
-                Lenker eller knapper bør skille seg ut fra resten av teksten. Leseren på nettsiden bør forstå at man
-                skal trykke på bilde, ordet eller et tegn for å komme videre til en ny side, eller få noe til å skje på
-                siden. Dette er også lurt med tanke på nav-baren som skal være lett å navigere i.
-            </p>
-        </div>
 
-    </section>
+        </section>
 
-    <section id="lyd">
-        <div>
-            <h2> Hørsel </h2>
-            <p> For de med drålig hørsel på en nettside er et av tilpasningene teksting på filmsnutter og lydklipp. Dermed kan de som
-                ser på videoen likevel få med seg hva som blir sagt. </p>
-        </div>
+        <section id="kontrast">
+            <div>
+                <h2> Kontrast </h2>
+                <p> For at lesere skal få en god oversikt på nettsiden, lønner deg seg og ha kontraster. Bakgrunnsfargen
+                    på
+                    siden og teksten bør ikke begge ha samme type farge. Det vil si at en hvit bakgunn ikke burde ha en
+                    lys
+                    beige farge. Hvis fargene har like nyanser og ikke skiller mellom lys og mørkt, blir det
+                    vanskeligere å
+                    se hva som står på siden.
 
-    </section>
+                    Lenker eller knapper bør skille seg ut fra resten av teksten. Leseren på nettsiden bør forstå at man
+                    skal trykke på bilde, ordet eller et tegn for å komme videre til en ny side, eller få noe til å skje
+                    på
+                    siden. Dette er også lurt med tanke på nav-baren som skal være lett å navigere i.
+                </p>
+            </div>
+
+        </section>
+
+        <section id="lyd">
+            <div>
+                <h2> Hørsel </h2>
+                <p> For de med drålig hørsel på en nettside er et av tilpasningene teksting på filmsnutter og lydklipp.
+                    Dermed kan de som
+                    ser på videoen likevel få med seg hva som blir sagt.
+
+                </p>
+            </div>
+
+        </section>
+    </main>
 
     <footer>
 
