--- a/gdpr.html
+++ b/gdpr.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Personvern </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1> Personvern </h1>
     <h2> GDPR </h2>
+    <p id="definition"> GDPR er forkortelsen for General Data Protection Regulation, de spesifikke personvernlovene for individuelle
+        borgere i EU (EU) og Det europeiske økonomiske samarbeidsområdet (EØS).</p>
+    <section id="mindmap">
+        <div class="center">
+            <img src="bilder/"
+
+        </div>
+
+
+        <script src="script.js"></script>
 </body>
+
 </html>
