--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -69,8 +69,11 @@
             <div>
                 <h2> Hørsel </h2>
                 <p> For de med drålig hørsel på en nettside er et av tilpasningene teksting på filmsnutter og lydklipp.
-                    Dermed kan de som
-                    ser på videoen likevel få med seg hva som blir sagt.
+                    Dermed kan de som ser på videoen likevel få med seg hva som blir sagt.
+                    Nedsatt hørsel kan få konsekvenser for kommunikasjon og deltakelse. Derfor er det viktig å
+                    lage tilgjengelig nettinnhold for personer med nedsatt hørsel. Dette gjøres ved å tekste videoer og
+                    ha transkripsjoner for alt lydinnhold, for eksempel en podkast. Døvblinde bruker skjermleser og leser
+                    punktskrift, så de trenger tilgjengelig innhold, inkludert tekstalternativ for bilder.
 
                 </p>
             </div>
