--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </section>
 
         <section id="tuttifrutti">
+            <h2>Fenomener på sosiale medier</h2>
             <div class="fenomen">
                 <h3>Dobbelsnap</h3>
                 <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
