--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     sang i dag er det rette stedet uten tvil tiktok. </p>
             </div>
             <div class="fenomen">
-                <h3>Ghosting</h3>
+                <h3>Ghosting <i class="fa-brands fa-snapchat"></i> </h3>
                 <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
             </div>
             <div class="fenomen">
