--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id="tuttifrutti">
             <h2>Fenomener på sosiale medier</h2>
             <div class="fenomen">
-                <h3>Dobbelsnap</h3>
+                <h3>Dobbelsnap <i class="fa-brands fa-square-snapchat"></i> </h3>
                 <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
                     Normalt er det vanlig å kun sende en om gangen. Dermed er det utenom det vanlige dersom man sender
                     to
@@ -52,18 +52,19 @@
                 <ul>
                     <li> hvis det er noen viktig</li>
                     <li> hvis det bestevennen din</li>
-                    <li> hvis du vil vise ekstra interresse <i class="fa-regular fa-face-grin-wink"></i></li>
+                    <li> hvis du vil vise ekstra interresse</li>
                 </ul>
 
             </div>
             <div class="fenomen">
-                <h3>Halfswipe</h3>
+                <h3>Halfswipe <i class="fa-solid fa-mobile-screen-button"></i></h3>
                 <p> Halfswiping er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har lest
                     den.
                     Det kalles halfswiping fordi man drar skjermen halveis til siden for å se chatten. </p>
+
             </div>
             <div class="fenomen">
-                <h3>Stalking</h3>
+                <h3>Stalking <i class="fa-brands fa-facebook"></i> </h3>
                 <p>Stalking vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra hva som
                     ligger
                     ute av informasjon om dem på nettet. Sosiale medier og funksjoner som ofte brukes til stalking er:
@@ -76,7 +77,7 @@
                 </ul>
             </div>
             <div class="fenomen">
-                <h3>Tiktok</h3>
+                <h3>Tiktok <i class="fa-brands fa-tiktok"></i></h3>
                 <p> Tiktok er et sosialt medium som står for mange av trendene blant unge i dag. Skal man markedsføre en
                     sang i dag er det rette stedet uten tvil tiktok. </p>
             </div>
@@ -85,7 +86,7 @@
                 <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
             </div>
             <div class="fenomen">
-                <h3>Reading</h3>
+                <h3>Reading <i class="fa-solid fa-book-open"></i></h3>
                 <p> Reading er når man åpner snappen til noen, men ikke svarer. begrepe kan også bli brukt om meldinger
                 </p>
             </div>
