--- a/index.html
+++ b/index.html
@@ -43,18 +43,24 @@
 
         <section id="tuttifrutti">
             <h2>Fenomener på sosiale medier</h2>
-            <div class="fenomen">
-                <h3>Dobbelsnap <i class="fa-brands fa-square-snapchat"></i> </h3>
-                <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
-                    Normalt er det vanlig å kun sende en om gangen. Dermed er det utenom det vanlige dersom man sender
-                    to
-                    etter hverandre. Eksempeler på tilfeller hvor det er innafor å sende dobbelsnap er: </p>
-                <ul>
-                    <li> hvis det er noen viktig</li>
-                    <li> hvis det bestevennen din</li>
-                    <li> hvis du vil vise ekstra interresse</li>
-                </ul>
-
+            <div class="fenomen flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <h3>Dobbelsnap <i class="fa-brands fa-square-snapchat"></i> </h3>
+                    </div>
+                    <div class="flip-card-back">
+                        <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
+                            Normalt er det vanlig å kun sende en om gangen. Dermed er det utenom det vanlige dersom man
+                            sender
+                            to
+                            etter hverandre. Eksempeler på tilfeller hvor det er innafor å sende dobbelsnap er: </p>
+                        <ul>
+                            <li> hvis det er noen viktig</li>
+                            <li> hvis det bestevennen din</li>
+                            <li> hvis du vil vise ekstra interresse</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="fenomen">
                 <h3>Halfswipe <i class="fa-solid fa-mobile-screen-button"></i></h3>
