--- a/index.html
+++ b/index.html
@@ -62,39 +62,83 @@
                     </div>
                 </div>
             </div>
-            <div class="fenomen">
-                <h3>Halfswipe <i class="fa-solid fa-mobile-screen-button"></i></h3>
-                <p> Halfswiping er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har lest
-                    den.
-                    Det kalles halfswiping fordi man drar skjermen halveis til siden for å se chatten. </p>
 
+
+            <div class="fenomen flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <h3>Halfswipe <i class="fa-solid fa-mobile-screen-button"></i></h3>
+                    </div>
+                    <div class="flip-card-back">
+                        <p> Halfswiping er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har
+                            lest
+                            den.
+                            Det kalles halfswiping fordi man drar skjermen halveis til siden for å se chatten. </p>
+                    </div>
+                </div>
             </div>
-            <div class="fenomen">
-                <h3>Stalking <i class="fa-brands fa-facebook"></i> </h3>
-                <p>Stalking vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra hva som
-                    ligger
-                    ute av informasjon om dem på nettet. Sosiale medier og funksjoner som ofte brukes til stalking er:
-                </p>
-                <ul>
-                    <li> Snapchat </li>
-                    <li> FaceBook </li>
-                    <li> Instagarm </li>
-                    <li> VSCO </li>
-                </ul>
+
+
+            <div class="fenomen flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <h3>Stalking <i class="fa-brands fa-facebook"></i> </h3>
+                    </div>
+                    <div class="flip-card-back">
+                        <p>Stalking vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra
+                            hva som
+                            ligger
+                            ute av informasjon om dem på nettet. Sosiale medier og funksjoner som ofte brukes til
+                            stalking er:
+                        </p>
+                        <ul>
+                            <li> Snapchat </li>
+                            <li> FaceBook </li>
+                            <li> Instagarm </li>
+                            <li> VSCO </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="fenomen">
-                <h3>Tiktok <i class="fa-brands fa-tiktok"></i></h3>
-                <p> Tiktok er et sosialt medium som står for mange av trendene blant unge i dag. Skal man markedsføre en
-                    sang i dag er det rette stedet uten tvil tiktok. </p>
+
+
+            <div class="fenomen flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <h3>Tiktok <i class="fa-brands fa-tiktok"></i></h3>
+                    </div>
+                    <div class="flip-card-back">
+                        <p> Tiktok er et sosialt medium som står for mange av trendene blant unge i dag. Skal man
+                            markedsføre en
+                            sang i dag er det rette stedet uten tvil tiktok. </p>
+                    </div>
+                </div>
             </div>
-            <div class="fenomen">
-                <h3>Ghosting <i class="fa-brands fa-snapchat"></i> </h3>
-                <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
+
+
+            <div class="fenomen flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <h3>Ghosting <i class="fa-brands fa-snapchat"></i> </h3>
+                    </div>
+                    <div class="flip-card-back">
+                        <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
+                    </div>
+                </div>
             </div>
-            <div class="fenomen">
-                <h3>Reading <i class="fa-solid fa-book-open"></i></h3>
-                <p> Reading er når man åpner snappen til noen, men ikke svarer. begrepe kan også bli brukt om meldinger
-                </p>
+
+
+            <div class="fenomen flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <h3>Reading <i class="fa-solid fa-book-open"></i></h3>
+                    </div>
+                    <div class="flip-card-back">
+                        <p> Reading er når man åpner snappen til noen, men ikke svarer. begrepe kan også bli brukt om
+                            meldinger
+                        </p>
+                    </div>
+                </div>
             </div>
 
         </section>
