flytte på ikoner

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <div class="fenomen flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Dobbelsnap <i class="fa-brands fa-square-snapchat"></i> </h3>
+                        <h3>Dobbelsnap</h3>
+                        <i class="fa-brands fa-square-snapchat"></i>
                     </div>
                     <div class="flip-card-back">
                         <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
@@ -67,7 +68,8 @@
             <div class="fenomen flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Halfswipe <i class="fa-solid fa-mobile-screen-button"></i></h3>
+                        <h3>Halfswipe</h3>
+                        <i class="fa-solid fa-mobile-screen-button"></i>
                     </div>
                     <div class="flip-card-back">
                         <p> Halfswiping er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har
@@ -82,7 +84,8 @@
             <div class="fenomen flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Stalking <i class="fa-brands fa-facebook"></i> </h3>
+                        <h3>Stalking</h3>
+                        <i class="fa-brands fa-facebook"></i>
                     </div>
                     <div class="flip-card-back">
                         <p>Stalking vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra
@@ -105,7 +108,8 @@
             <div class="fenomen flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Tiktok <i class="fa-brands fa-tiktok"></i></h3>
+                        <h3>Tiktok</h3>
+                        <i class="fa-brands fa-tiktok"></i>
                     </div>
                     <div class="flip-card-back">
                         <p> Tiktok er et sosialt medium som står for mange av trendene blant unge i dag. Skal man
@@ -119,7 +123,8 @@
             <div class="fenomen flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Ghosting <i class="fa-brands fa-snapchat"></i> </h3>
+                        <h3>Ghosting</h3>
+                        <i class="fa-brands fa-snapchat"></i>
                     </div>
                     <div class="flip-card-back">
                         <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
@@ -131,7 +136,8 @@
             <div class="fenomen flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Reading <i class="fa-solid fa-book-open"></i></h3>
+                        <h3>Reading</h3>
+                        <i class="fa-solid fa-book-open"></i>
                     </div>
                     <div class="flip-card-back">
                         <p> Reading er når man åpner snappen til noen, men ikke svarer. begrepe kan også bli brukt om
