--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <label class="toppnav">SoMe</label>
+            <label class="logo">SoMe</label>
             <ul>
                 <li><a href="#">Universiell utforming</a></li>
                 <li><a href="#">GDPR</a></li>
