--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav>
             <label class="logo">SoMe</label>
             <ul>
-                <li><a href="#">Universiell utforming</a></li>
-                <li><a href="#">GDPR</a></li>
+                <li><a href="universiell_utforming.html">Universiell utforming</a></li>
+                <li><a href="gdpr.html">GDPR</a></li>
             </ul>
         </nav>
     </header>
