mer tekst på fenomener

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                         <i class="fa-brands fa-snapchat"></i>
                     </div>
                     <div class="flip-card-back">
-                        <p> Ghosting er når en person slutter å åpne og svare på meldinger. </p>
+                        <p> Ghosting er når en person slutter å åpne og svare på meldinger. Begrepet kan brukes når man
+                            snakker om meldinger/chatter på ulike sosiale medie, ikke bare på meldinger </p>
                     </div>
                 </div>
             </div>
@@ -140,7 +141,8 @@
                         <i class="fa-solid fa-book-open"></i>
                     </div>
                     <div class="flip-card-back">
-                        <p> Reading er når man åpner snappen til noen, men ikke svarer. begrepe kan også bli brukt om
+                        <p> Reading er når man åpner snappen til noen, men ikke svarer. Navnet kommer av at men leser
+                            snappen. Begrepe kan også bli brukt om
                             meldinger
                         </p>
                     </div>
