--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Universiell utforming </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 <body>
@@ -41,6 +44,7 @@
                     fargeblinde ikke klarer å skille resultatene grafen prøver å vise.
                 </p>
             </div>
+            <div> <i class="fa-solid fa-eye"></i> </div>
 
 
         </section>
@@ -62,6 +66,7 @@
                     siden. Dette er også lurt med tanke på nav-baren som skal være lett å navigere i.
                 </p>
             </div>
+            <div> <i class="fa-solid fa-circle-half-stroke"></i> </div>
 
         </section>
 
@@ -74,9 +79,9 @@
                     lage tilgjengelig nettinnhold for personer med nedsatt hørsel. Dette gjøres ved å tekste videoer og
                     ha transkripsjoner for alt lydinnhold, for eksempel en podkast. Døvblinde bruker skjermleser og leser
                     punktskrift, så de trenger tilgjengelig innhold, inkludert tekstalternativ for bilder.
-
                 </p>
             </div>
+            <div> <i class="fa-solid fa-headphones"></i> </div>
 
         </section>
     </main>
