--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -30,7 +30,7 @@
             språkferdigheter og konsentrasjonsnivå.</p>
 
 
-        <section id="syn">
+        <section class="boks" id="syn">
             <div>
                 <h2> Syn </h2>
                 <p> For svaksynte er det viktig at nettsiden er oversiktlig med tydelige overskrifter og fordelinger. En
@@ -49,7 +49,7 @@
 
         </section>
 
-        <section id="kontrast">
+        <section class="boks" id="kontrast">
             <div>
                 <h2> Kontrast </h2>
                 <p> For at lesere skal få en god oversikt på nettsiden, lønner deg seg og ha kontraster. Bakgrunnsfargen
@@ -70,7 +70,7 @@
 
         </section>
 
-        <section id="lyd">
+        <section class="boks" id="lyd">
             <div>
                 <h2> Hørsel </h2>
                 <p> For de med drålig hørsel på en nettside er et av tilpasningene teksting på filmsnutter og lydklipp.
